namespace Anansi.Domain.Enums;

public enum WebhookEventType
{
    BookingCreated,
    PaymentReceived,
    ContractSigned,
    FormSubmitted
}
